- added delete post

--- a/src/app/forum/forum-topic/forum-topic-post/forum-topic-post.component.html
+++ b/src/app/forum/forum-topic/forum-topic-post/forum-topic-post.component.html
@@ -30,7 +30,7 @@
         <bio-icon>edit</bio-icon>
         Edit
       </button>
-      <button bioButton type="button" *ngIf="post.deleteAllowed">
+      <button bioButton type="button" *ngIf="post.deleteAllowed" (click)="delete()">
         <bio-icon>delete</bio-icon>
         Delete
       </button>
