--- a/src/app/forum/forum-topic/forum-topic-post-reply/forum-topic-post-reply.component.scss
+++ b/src/app/forum/forum-topic/forum-topic-post-reply/forum-topic-post-reply.component.scss
@@ -1,14 +1,8 @@
 :host {
   display: block;
-  padding: 0.5rem 1rem;
 }
 
-.actions {
-  display: flex;
-  justify-content: flex-end;
-  margin-top: 1rem;
-
-  .button:not(:last-of-type) {
-    margin-right: 1rem;
-  }
+.modal-content {
+  overflow-y: auto;
+  overflow-x: hidden;
 }
