--- a/src/app/forum/forum-topic/forum-topic.component.html
+++ b/src/app/forum/forum-topic/forum-topic.component.html
@@ -3,7 +3,7 @@
   <h4 bioCardTitle>{{ topic.name }} - {{ loading }}</h4>
   <bio-card-content>
     <div class="actions" *ngIf="!topic.lockedDate || topic.isModerator">
-      <button accent bioButton type="button" (click)="replying = true" [disabled]="replying">
+      <button accent bioButton type="button" (click)="onReply()" [loading]="loadingReply">
         <bio-icon>reply</bio-icon>
         Reply
       </button>
@@ -13,25 +13,17 @@
       [post]="post"
       [odd]="$odd"
       [topicLocked]="!!topic.lockedDate && !topic.isModerator"
+      [loadingReply]="loadingReply"
       (postChange)="onPostChange($event)"
       (postDelete)="onPostDelete()"
+      (postQuote)="onReply($event)"
     ></bio-forum-topic-post>
-    <ng-container *ngIf="replying">
-      <hr />
-      <bio-forum-topic-post-reply
-        [idTopic]="topic.id"
-        [topicName]="topic.name"
-        (cancel)="replying = false"
-        (afterSubmit)="onAfterSubmitPost($event)"
-      ></bio-forum-topic-post-reply>
-    </ng-container>
   </bio-card-content>
   <bio-card-actions end>
     <bio-pagination
       [meta]="topic.posts.meta"
       itemsPerPageHidden
       (currentPageChange)="onPageChange($event)"
-      [disabled]="replying"
     ></bio-pagination>
   </bio-card-actions>
 </bio-card>
