--- a/src/app/forum/forum-sub-category/forum-sub-category-topic/forum-sub-category-topic.component.scss
+++ b/src/app/forum/forum-sub-category/forum-sub-category-topic/forum-sub-category-topic.component.scss
@@ -1,12 +1,35 @@
 @use 'variables' as v;
 @use '../forum-sub-category' as sub-category;
 
+.icon-moderator {
+  display: none;
+}
+
+.icon-user {
+  padding: 0.25rem;
+  visibility: hidden;
+
+  &.show {
+    visibility: visible;
+  }
+}
+
 :host {
   @include sub-category.sub-category-grid();
 
   &:hover {
     background-color: v.$primary-50;
     text-decoration: none;
+
+    &.is-moderator {
+      .icon-moderator {
+        display: inline-block;
+      }
+
+      .icon-user {
+        display: none;
+      }
+    }
   }
 
   color: inherit;
