--- a/src/app/forum/forum-topic/forum-topic.component.html
+++ b/src/app/forum/forum-topic/forum-topic.component.html
@@ -17,6 +17,7 @@
       (postChange)="onPostChange($event)"
       (postDelete)="onPostDelete()"
       (postQuote)="onReply($event)"
+      (topicDelete)="onTopicDelete()"
     ></bio-forum-topic-post>
   </bio-card-content>
   <bio-card-actions end>
