--- a/src/app/shared/components/icon/icon.scss
+++ b/src/app/shared/components/icon/icon.scss
@@ -34,9 +34,12 @@
 
   &.icon-mdi {
     display: inline-block;
+    width: 24px;
+    height: 24px;
 
     svg {
       width: 24px;
+      height: 24px;
     }
   }
 
@@ -46,8 +49,12 @@
     transform: rotate(0.03deg);
 
     &.icon-mdi {
+      width: 18px;
+      height: 18px;
+
       svg {
         width: 18px;
+        height: 18px;
       }
     }
   }
@@ -57,8 +64,12 @@
     line-height: 24px;
 
     &.icon-mdi {
+      width: 24px;
+      height: 24px;
+
       svg {
         width: 24px;
+        height: 24px;
       }
     }
   }
@@ -68,8 +79,12 @@
     line-height: 36px;
 
     &.icon-mdi {
+      width: 36px;
+      height: 36px;
+
       svg {
         width: 36px;
+        height: 36px;
       }
     }
   }
