--- a/src/app/forum/forum-sub-category/forum-sub-category.component.html
+++ b/src/app/forum/forum-sub-category/forum-sub-category.component.html
@@ -14,6 +14,8 @@
       [routerLink]="['topic', topic.id, 'page', 1]"
       *ngFor="let topic of subCategory.topics.items; trackBy: trackById"
       [topic]="topic"
+      (topicChange)="onTopicChange($event)"
+      (reloadSubCategory)="onReloadSubcategory()"
     >
     </a>
   </bio-card-content>
