--- a/src/app/forum/forum-sub-category/forum-sub-category.component.html
+++ b/src/app/forum/forum-sub-category/forum-sub-category.component.html
@@ -1,6 +1,9 @@
 <bio-card dark>
   <bio-loading *ngIf="loading"></bio-loading>
   <bio-card-content>
+    <div class="actions">
+      <a bioButton accent [routerLink]="['topic', 'new']">New topic</a>
+    </div>
     <div class="grid-container grid-container--header">
       <div class="grid-container__name">Topic name</div>
       <div class="grid-container__created-by">Created by</div>
