--- a/src/app/forum/forum-topic/forum-topic-post/forum-topic-post.component.scss
+++ b/src/app/forum/forum-topic/forum-topic-post/forum-topic-post.component.scss
@@ -1,4 +1,5 @@
 @use 'variables' as v;
+@use 'mixins' as m;
 
 :host {
   display: flex;
@@ -6,6 +7,13 @@
 
   &.odd {
     background-color: v.$primary-50;
+  }
+
+  border: 2px solid transparent;
+
+  &.highlight {
+    border-color: v.$accent-300;
+    @include m.elevation(3);
   }
 }
 
