- show users online in the forum - some fixed aroung socket io connections

--- a/src/app/forum/forum-categories/forum-categories.component.html
+++ b/src/app/forum/forum-categories/forum-categories.component.html
@@ -48,8 +48,7 @@
         <bio-forum-categories-recent-topics [recentTopics]="recentTopics"></bio-forum-categories-recent-topics>
       </bio-accordion-item>
       <bio-accordion-item accordionTitle="Players online" expanded>
-        Players online
-        <!--TODO-->
+        <bio-forum-categories-players-online></bio-forum-categories-players-online>
       </bio-accordion-item>
     </bio-accordion>
   </ng-container>
