--- a/src/app/player/player-profile/player-profile.component.html
+++ b/src/app/player/player-profile/player-profile.component.html
@@ -13,7 +13,7 @@
       <ng-container *ngTemplateOutlet="flagTemplate"></ng-container>
     </button>
     <ng-template #flagTemplate>
-      <bio-icon small [flag]="player.region?.shortName" [bioTooltip]="player.region?.name"></bio-icon>
+      <bio-icon class="flag" small [flag]="player.region?.shortName" [bioTooltip]="player.region?.name"></bio-icon>
     </ng-template>
     <h3>{{ player.personaName }}</h3>
     <a
