- update Notification model - added forum topic notification handling (closes #91)

--- a/src/app/notification/notifications-icon/notifications-icon.component.html
+++ b/src/app/notification/notifications-icon/notifications-icon.component.html
@@ -32,6 +32,7 @@
       [meta]="meta"
       [loading]="loading"
       [loadingMore]="loadingMore"
+      (closeOverlay)="overlayIsOpen = false"
       @fadeInOut
       @scaleIn
     ></bio-notifications>
