--- a/src/app/player/player-profile/player-profile.component.scss
+++ b/src/app/player/player-profile/player-profile.component.scss
@@ -1,3 +1,5 @@
+@use 'variables' as v;
+
 :host {
   > * {
     margin-bottom: 1rem;
@@ -11,10 +13,37 @@
 
     > .flag {
       margin-right: 0.25rem;
+      margin-left: 0.25rem;
     }
 
     > h3 {
       margin-right: 1rem;
+    }
+  }
+}
+
+.avatar {
+  position: relative;
+  overflow: hidden;
+
+  .overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translateY(100%);
+    transition: transform 200ms ease;
+    background-color: transparentize(v.$primary-500, 0.25);
+    border-radius: inherit;
+  }
+
+  &:hover {
+    .overlay {
+      transform: translateY(0);
     }
   }
 }
