- added Online/Offline indicator to forum post (closes #93)

--- a/src/app/forum/forum-categories/forum-categories-players-online/forum-categories-players-online.component.html
+++ b/src/app/forum/forum-categories/forum-categories-players-online/forum-categories-players-online.component.html
@@ -1,3 +1,6 @@
-<a *ngFor="let user of usersOnline; trackBy: trackById; let $last = last" [routerLink]="['/player', user.idPlayer]">
-  {{ user.personaName }}{{ !$last ? ',' : '' }}
-</a>
+<ng-container *ngIf="usersOnline$ | async as usersOnline">
+  <a *ngFor="let user of usersOnline; trackBy: trackById; let $last = last" [routerLink]="['/player', user.idPlayer]">
+    {{ user.personaName }}{{ !$last ? ',' : '' }}
+  </a>
+  <p *ngIf="!usersOnline.length">No players online</p>
+</ng-container>
