- fixed cache service - added input type to player profile - added input type to score info

--- a/src/app/score/score-info/score-info.component.html
+++ b/src/app/score/score-info/score-info.component.html
@@ -43,6 +43,10 @@
       <bio-icon small>launch</bio-icon>
     </a>
   </div>
+  <ng-container *ngIf="player.inputTypeName">
+    <div class="title">Controller:</div>
+    <div class="value">{{ player.inputTypeName }}</div>
+  </ng-container>
   <div class="title">Character {{ $index + 1 }}:</div>
   <div class="value">
     {{ player.characterName }} {{ player.characterCostumeName }}
