--- a/src/app/player/player-profile/player-profile.component.html
+++ b/src/app/player/player-profile/player-profile.component.html
@@ -65,6 +65,7 @@
       <bio-icon [mdi]="mdiSteam"></bio-icon>
     </a>
   </div>
+  <div bioCardSubtitle *ngIf="player.inputTypeName">{{ player.inputTypeName }}</div>
   <div bioCardSubtitle>{{ player.title }}</div>
   <div bioCardSubtitle class="about-me">{{ player.aboutMe }}</div>
   <bio-card-content>
@@ -111,6 +112,17 @@
           #titleModel="model"
         />
         <bio-hint end>{{ titleModel.model?.length }} / 250</bio-hint>
+      </bio-form-field>
+      <bio-form-field label="Preferred controller" [loading]="inputTypeLoading">
+        <bio-select
+          [model]="player.idInputType"
+          (modelChange)="updatePlayer('idInputType', $event)"
+          placeholder="Preferred controller"
+        >
+          <bio-option [value]="inputType.id" *ngFor="let inputType of inputTypes$ | async; trackBy: trackById">
+            {{ inputType.name }}
+          </bio-option>
+        </bio-select>
       </bio-form-field>
       <bio-form-field label="About me">
         <textarea
