--- a/src/app/forum/forum-topic/forum-topic.component.scss
+++ b/src/app/forum/forum-topic/forum-topic.component.scss
@@ -11,10 +11,15 @@
   margin-bottom: 0.5rem;
   display: flex;
   justify-content: flex-end;
+  align-items: flex-end;
   padding-left: 1rem;
   padding-right: 1rem;
 
   .button {
     margin-left: 1rem;
+  }
+
+  .checkbox-container {
+    width: auto;
   }
 }
