- added input type to ScoreAddPlayer forms (closes #50)

--- a/src/app/score/score-add/score-add.component.html
+++ b/src/app/score/score-add/score-add.component.html
@@ -27,8 +27,10 @@
         (hostChange)="hostChange($index)"
         (playerChange)="scorePlayerControl.setValue($event)"
         [player]="player"
-        [characters]="characters$ | async"
+        [characters]="characters$ | asyncDefault: []"
+        [platformInputTypes]="platformInputTypes$ | asyncDefault: []"
         [charactersLoading]="characterLoading"
+        [platformInputTypeLoading]="platformInputTypeLoading"
         [first]="$first"
         [playerNumber]="$index + 1"
         [idPlayersSelected]="(idPlayersSelected$ | async) ?? []"
