- fixed sub-category and topic not working properly when no data is found

--- a/src/app/forum/forum-sub-category/forum-sub-category.component.html
+++ b/src/app/forum/forum-sub-category/forum-sub-category.component.html
@@ -21,6 +21,7 @@
       (reloadSubCategory)="onReloadSubcategory()"
     >
     </a>
+    <p class="no-data-found" *ngIf="!subCategory.topics.items.length">No topics found</p>
   </bio-card-content>
   <bio-card-actions end>
     <bio-pagination
