--- a/src/app/shared/components/form/form-field.component.html
+++ b/src/app/shared/components/form/form-field.component.html
@@ -16,7 +16,7 @@
   [ngClass]="{
     'has-prefix': !!prefixDirective,
     'has-suffix': !!suffixDirective,
-    disabled: control?.disabled,
+    disabled: controlState?.disabled,
     'is-select': !!select
   }"
 >
@@ -32,7 +32,7 @@
   </div>
 </div>
 <div class="form-field__bottom-wrapper">
-  <div class="form-field__hints" *ngIf="!control?.touched || !(control?.hasErrors$ | async)" @fadeIn>
+  <div class="form-field__hints" *ngIf="!controlState?.touched || !(control?.hasErrors$ | async)" @fadeIn>
     <ng-content select="bio-hint:not([end]),[bioHint]:not([end])"></ng-content>
     <div class="form-field__hint-spacer"></div>
     <ng-content select="bio-hint[end],[bioHint][end]"></ng-content>
