--- a/src/app/shared/components/icon/flag/flag.component.scss
+++ b/src/app/shared/components/icon/flag/flag.component.scss
@@ -1,4 +1,4 @@
-@use '~flag-icon-css/sass/flag-icons-base';
+@use 'flag-icon-css/sass/flag-icons-base';
 
 .flag-icon-unknown {
   background-color: #ccc;
