--- a/src/app/admin/admin-errors/admin-errors.component.scss
+++ b/src/app/admin/admin-errors/admin-errors.component.scss
@@ -8,8 +8,12 @@ p {
   top: 1rem;
 }
 
-.sql-query {
+.position-relative {
   position: relative;
+
+  code {
+    min-height: 4rem;
+  }
 }
 
 .sql-parameters {
