--- a/src/app/shared/components/icon/flag/flag.component.scss
+++ b/src/app/shared/components/icon/flag/flag.component.scss
@@ -1,5 +1,5 @@
-@use 'flag-icon-css/sass/flag-icons-base';
+@use 'flag-icons/sass/flag-icons-base';
 
-.flag-icon-unknown {
+.fi-unknown {
   background-color: #ccc;
 }
